add bios shaders

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <button data-do="import">导入游戏</button>
                 <button data-do="bios">写入固件</button>
                 <button data-do="shaders">写入滤镜</button>
+                <button data-do="shaders2">默认滤镜</button>
+                <button data-do="bios2">默认固件</button>
                 <button data-do="patch">写入IPS补丁?(临时)</button>
             </div>
             <h3>选择一个游戏运行</h3>
