--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <script type="text/javascript" src="assets/js/nipplejs.js"></script>
     <script type="text/javascript" src="assets/js/gamepad.js"></script>
     <script type="text/javascript" src="assets/js/NengeDisk.js"></script>
-    <script type="text/javascript" src="assets/js/vbanext.js"></script>
+    <script type="text/javascript" src="assets/js/vbanext.js?3"></script>
 </body>
 
 </html>
