--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="initial-scale=1,width=device-width, height=device-height">
     <title>最终GBA模拟器</title>
     <link rel="apple-touch-icon" href="icon/gba2.png">
+    <link rel="mainifest" href="mainifest.json">
     <link rel="stylesheet" href="assets/css/style.css">
-
 <body>
     <div class="welcome">
         <img src="assets/images/zan.jpg">
@@ -334,7 +334,7 @@
     <script type="text/javascript" src="assets/js/nipplejs.js"></script>
     <script type="text/javascript" src="assets/js/gamepad.js"></script>
     <script type="text/javascript" src="assets/js/NengeDisk.js"></script>
-    <script type="text/javascript" src="assets/js/vbanext.js?3"></script>
+    <script type="text/javascript" src="assets/js/vbanext.js"></script>
 </body>
 
 </html>
