--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="initial-scale=1,width=device-width, height=device-height">
     <title>最终GBA模拟器</title>
-    <link rel="apple-touch-icon" href="icon/gba2.png">
+    <link rel="apple-touch-icon" href="assets/images/gba2.png">
     <link rel="mainifest" href="mainifest.json">
     <link rel="stylesheet" href="assets/css/style.css">
 <body>
