--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <div class="wel-result"></div>
             <div class="wel-core-mod">
-                <h1>设置启动核心</h1>
+                <h1>设置启动核心(默认mGBA)</h1>
                 <p>不同核心直接存在差异,例如水晶版切换核心会产生性别转换.因此非必要,修改后不要更改!vbanext仅仅支持gba,mgba支持所有,gb仅仅支持gbc/gb游戏.</p>
-                <p class="warning">gb和mgba的存档和状态不兼容的!</p>
-                <button data-mod="vbanext">vbanext</button>
+                <p class="warning">gb和mgba的存档和状态不兼容的!<br>加载核心下载过慢!<br>请关闭并打开手游加速器加速外服游戏再打开.</p>
+                <button data-mod="vbanext">vbanext(原版本)</button>
                 <button data-mod="mgba">mgba</button>
                 <button data-mod="gb">gb</button>
                 <p>核心编译来源<a href="//emulatorjs.com">emulatorjs.com</a> 0.5.8版本,可正常使用加速一倍,经过本人魔改RTC,金手指</p>
@@ -39,13 +39,14 @@
         <div class="wel-start" hidden>
             <div class="wel-start-ready">
                 <button data-do="import">导入游戏</button>
-                <button data-do="bios">写入固件</button>
-                <button data-do="shaders">写入滤镜</button>
+                <button data-do="bios">导入固件</button>
+                <button data-do="shaders">导入滤镜</button>
                 <button data-do="shaders2">默认滤镜</button>
                 <button data-do="bios2">默认固件</button>
-                <button data-do="patch">写入IPS补丁?(临时)</button>
+                <button data-do="patch">导入IPS补丁?(临时)</button>
             </div>
             <h3>选择一个游戏运行</h3>
+            <p>没有游戏请导入手机中游戏.百度网盘的压缩文件请改名pdf用打开方式存储到手机,然后导入该pdf.</p>
             <ul class="wel-game-list">
                 
             </ul>
