--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <body>
     <div class="welcome">
         <img src="assets/images/zan.jpg">
+        <div class="wel-state-tips state-tips">
+            请稍等....
+        </div>
         <div class="wel-index" hidden>
             <div class="wel-btn">
                 <button class="wel-start-btn">运行游戏</button>
@@ -27,6 +30,7 @@
                 <button data-db="states">临时状态</button>
                 <button data-db="images">图片管理</button>
                 <button data-db="retroarch">其他管理</button>
+                <button data-act="worker">刷新离线缓存</button>
             </div>
             <div class="wel-result"></div>
             <div class="wel-core-mod">
@@ -64,6 +68,7 @@
             <p>6.金手指添加后需要点击"启用"才会写入,如果需要关闭,只能点击"重置",再开启你需要的.</p>
             <p>7.RTC魔改问题,一旦使用分变秒等,改回来可能造成时间错乱概不负责.因为我只做了乘法运算.</p>
             <p>核心编译来源<a href="//emulatorjs.com">emulatorjs.com</a> 0.5.8版本,本代码免费使用,欢迎自行修改应用到你的网站,或者在github复制后,锁定某游戏启动.有什么问题欢迎到<b>nenge123/vba_next_wasm</b>提交建议或者斧正代码.</p>
+            <p>当前更新时间:2023 09/20 15:21</p>
         </div>
     </div>
     <div class="gba-body" hidden>
