--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             </div>
         </div>
         <div class="wel-about">
-            <h3>说明</h3>
-            <p>1.默认运行自动载入保存的电子存档,而不是旧版的自动载入状态.欢迎在Github fork in github:<a href="https://github.com/nenge123/vba_next_wasm">nenge123/vba_next_wasm</a></p>
-            <p>2.即时存档统一称为"状态",而普通存档称为电子存档.即存指即时保存状态,点击时有明显变色.即读是读取保存的即时状态</p>
-            <p>3.状态备份,是备份不同即时状态,不影响主界面的"即存"</p>
-            <p>4.核心说明,mgba支持所有,但是某些rom不要使用bios.gb核心仅仅支持gb/gbc,怀念屎绿(配色选DMG green)的朋友很适合.gb虽然支持sgb,但是彩色效果不如mgba(例如kof96).vbanext仅仅支持gba,打不打bios影响不大.</p>
-            <p>5.存档问题,不同核心存档不能正常共通.例如电脑的VBA模拟器gb/gbc,64kb存档可以在mgba中正常读取.128kb的gba原则上可以在vbanext/mgba正常读取.</p>
-            <p>6.金手指添加后需要点击"启用"才会写入,如果需要关闭,只能点击"重置",再开启你需要的.</p>
-            <p>7.RTC魔改问题,一旦使用分变秒等,改回来可能造成时间错乱概不负责.因为我只做了乘法运算.</p>
-            <p>核心编译来源<a href="//emulatorjs.com">emulatorjs.com</a> 0.5.8版本,本代码免费使用,欢迎自行修改应用到你的网站,或者在github复制后,锁定某游戏启动.有什么问题欢迎到<b>nenge123/vba_next_wasm</b>提交建议或者斧正代码.</p>
-            <p>当前更新时间:2023 09/22 19:40</p>
+            <h3>特别注意</h3>
+            <p>IOS已经上架:Delta - Game Emulator,请尽快下载.下载不了可以切换到外区!!2024/04/18</p>
+            <p>登录苹果用户官网:appleid.apple.com,
+                <br>登录后,找到[付款信息/添加付款方式,个人信息/区域更改]任意关键字,
+                <br>修改区域为美国,
+                <br>street街道随便填非中文,
+                <br>city城市state省份:new york,
+                <br>zipcode邮编:10001,电话212-555-1234,
+                <br>下方的<b>收货信息(SHIPPING ADDRESS)不用修改</b>,可以仍旧保留中文收获信息,
+                <br>直接翻到底部 更新即可(update)</p>
         </div>
     </div>
     <div class="gba-body" hidden>
